...
            "value" : "Gib deinen Vornamen ein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter your first name"
          }
        }
      }
    },
    "otp.contact.errors.lastName" : {
      "extractionState" : "manual",
...
            "value" : "Vorname"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "First name"
          }
        }
      }
    },
    "otp.contact.lastName" : {
      "extractionState" : "manual",
...
            "value" : "Registrierung pausiert"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign-up is paused"
          }
        }
      }
    },
    "· %@" : {
      "comment" : "A label that shows the verification method used to verify a document.",
...
    "common.login" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log ind"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log in"
          }
        }
      }
    },
    "common.password" : {
      "extractionState" : "manual",
...
            "value" : "Ungültige E-Mail-Adresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invalid email"
          }
        }
      }
    },
    "forgot.errSend" : {
      "extractionState" : "manual",
...
            "value" : "Nächster Schritt"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next step"
          }
        }
      }
    },
    "guide.of" : {
      "extractionState" : "manual",
...
            "value" : "Pinnwand"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bulletin board"
          }
        }
      }
    },
    "home.bulletinMetaDescription" : {
      "extractionState" : "manual",
...
            "value" : "Die Top-Angebote der Woche"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This week's top offers"
          }
        }
      }
    },
    "home.welcomeBack" : {
      "extractionState" : "manual",
...
    "more.languageSub" : {
      "extractionState" : "manual",
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dansk, English, Deutsch"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dansk, English, Deutsch"
...
            "state" : "translated",
            "value" : "More"
          }
        }
      }
    },
    "OK" : {
      "comment" : "A label displayed on a green button.",
      "isCommentAutoGenerated" : true
    },
    "otp.contact.address" : {
      "extractionState" : "manual",
      "localizations" : {
...
            "value" : "Start"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        }
      }
    },
    "tabs.menu" : {
      "extractionState" : "manual",
...
            "value" : "Willkommen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome"
          }
        }
      }
    },
    "verify.keyFob.errors.generic" : {
      "extractionState" : "manual",
...
